Attempt to make css-modules work

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,5 +2,7 @@ doctype html
 html
   head
     title Demo
+    link(rel='stylesheet', href='/index/common.css')
 
   body !{children}
+    script(type='text/javascript', src='/index/browser.js')
