--- a/bro/components/Tile.css
+++ b/bro/components/Tile.css
@@ -1,5 +1,10 @@
 .tile
 {
+  font-family: roboto, arial;
+  font-size: 13px;
+  font-style: normal;
+  line-height: 30px;
+
   display: block;
   float: left;
 
